Fixed: arrows are not vertically aligned in Chrome mobile

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -227,7 +227,7 @@ table.simpleTable:last-child {
 .overflowY { @apply overflow-y-scroll; }
 
 .pageNavigationBar {
-  @apply bg-[#fafaec] border box-border h-[38px] text-center w-full flex justify-between z-[100] [-webkit-tap-highlight-color:transparent] border-solid border-[lightgray];
+  @apply bg-[#fafaec] leading-none border box-border h-[38px] flex items-center text-center w-full flex justify-center z-[100] [-webkit-tap-highlight-color:transparent] border-solid border-[lightgray];
 }
 
 .dark .pageNavigationBar {
@@ -249,7 +249,9 @@ table.simpleTable:last-child {
   @apply bottom-[0];
 }
 .pageNavigationBarArrow {
-  @apply text-[40px] cursor-pointer flex items-center justify-center h-full;
+  @apply flex justify-center h-full text-[40px] cursor-pointer leading-none;
+   position: relative;
+  top: -6px;
 }
 
 .pageNavigationBarLeft {
